a1/brendan_gordon/TEST_PROGRAMS/invalidtype/grady_weber/redeclaration1.min
#redeclaration1
var x : int;
var x : int;

